# AREA

./: .gitignore  README.md  area_config.yaml  chr22forPSEA.ipynb  pyproject.toml  requirements.txt  requirements_gpu.txt  run_area.py  run_tests.py  setup.py
examples/: orgtable.sh  run_AREA.sh  run_AREA_chr21_T21.sh  run_AREA_full.sh  run_AREA_full_gpu.sh  run_AREA_includefiles.sh  run_AREA_includefiles_MONDO.sh  run_AREA_includefiles_MONDO_gpu.sh  run_AREA_includefiles_T21only.sh  run_AREA_includefiles_T21only_MONDO.sh  run_AREA_includefiles_gpu.sh  run_AREA_includefiles_gpu_T21only.sh  run_AREA_includefiles_gpu_temp.sh  run_AREA_mini.sh  run_prefilter.sh  run_test.sh  slurm_runAREA_prefiltered.sh  slurm_runpsea_fullinputfiles_filterviainclude_chr22.sh  slurm_runpsea_fullsimulatedfiles.sh  testcore_CPU.sh
notebook_examples/: AREA_core_example.ipynb  AREA_output_statistics.ipynb  Human_Trisome_Project_complete_trisomy_only.ipynb  Leadingedge_spline.ipynb  PSEA_metrics_on_simulated_data.ipynb  README.md  area_2_GSEA.ipynb  compare_links_chr21_chr22.ipynb  create_include_files.ipynb  metadata.ipynb  metrics_on_simulated_data.ipynb  my_favorite_gene.ipynb  one_comorbid_many_gene.ipynb  read_output.ipynb  single_gene_violin_plots.ipynb
pre_filter/: filter.py  filter_2.0.py  filter_functions.py  run_prefilter.sh
src/: AREA1.2_core.py  AREA_core.py  __init__.py  backend.py  cli.py  config.py  filter_functions.py  planning.py  psea_core.py  run_AREA.sh  run_prefilter.py  testcore_CPU.sh
testdata/: comorbid_file.csv  exclude_comorbiditieswhenrunningwith_T21only.txt  (+19 more)
(+13 files in other folders)
